--- a/index3.html
+++ b/index3.html
@@ -13,20 +13,17 @@
     <script>
         async function callback() {
             let Stock = document.getElementById('stock').value;
-            let Growth_Rate = document.getElementById('growth_rate').value
-            let Terminal_Growth = document.getElementById('terminal_growth').value
-            let Iterations = document.getElementById('iterations').value
-            let Risk_Free_Rate = document.getElementById('risk_free_rate').value
-            let Beta = document.getElementById('beta').value
-            let Market_Rate_Return = document.getElementById('market_rate_return').value
+            let Growth_Rate = document.getElementById('growth_rate').value;
+            let Terminal_Growth = document.getElementById('terminal_growth').value;
+            let Iterations = document.getElementById('iterations').value;
+            let Risk_Free_Rate = document.getElementById('risk_free_rate').value;
+            let Beta = document.getElementById('beta').value;
+            let Market_Rate_Return = document.getElementById('market_rate_return').value;
 
             let response = await fetch("/callback/getStock?data=" + Stock + "&growth_rate=" + Growth_Rate + "&terminal_growth=" + Terminal_Growth + "&iterations=" + Iterations + "&risk_free_rate=" + Risk_Free_Rate + "&beta=" + Beta + "&market_rate_return=" + Market_Rate_Return);
             if (response.ok) {
                 let chartJson = await response.json();
                 if (response.ok) {
-                    response = await fetch("/callback/getInfo?data=" + Stock);
-                    let infoJson = await response.json();
-                    info(infoJson);
                     Plotly.newPlot('chart', chartJson, {});
                 } else {
                     alert("HTTP-Error: " + response.status + "on getInfo");
@@ -169,22 +166,23 @@
                     <option value="0.020">20%</option>
                     <option value="0.025">25%</option>
                     <option value="0.030">30%</option>
+
                 </select>
             </div>
             <div class="col">
                 <button type="button" class="btn btn-primary" onclick="callback()">Stock valuation</button>
             </div>
-            <div class="w-100" style="padding:10px;text-align:right;font-size: small;"><i>Fair stock price modelled using a DCF model</i></div>
+            <div class="w-100" style="padding:10px;text-align:right;font-size: small;"><i>Fair stock 
+                price modelled using a DCF model</i></div>
             
             <div class="col-3"><p><b>Stock info</b></p>
                 <p>Symbol: <span id="symbol">N/A</span></p>
                 <p>Day High: <span id="dayHigh">N/A</span></p>
                 <p>Day Low: <span id="dayLow">N/A</span></p>  
-                <p>Growth Rate: <span id="growth_rate">N/A</span></p>
                 
             </div>
             <div class="col-9">
-                <h2 id="companyName></h2>
+                <h2 id="companyName"></h2>
                 <div id="chart" class="chart" style="height: 300px;border: 1px solid; 
                     box-shadow: 5px 5px 5px #888888;">
                 </div>
